fix(ButtonGroup): Ensure grouped buttons align to grid

--- a/react/Button/Button.less
+++ b/react/Button/Button.less
@@ -116,6 +116,7 @@
   width: 100%;
 
   .root {
+    vertical-align: top;
     @media only screen and (max-width: 500px) {
       width: 100%;
     }
